# L0Learn

./: .gitignore  .gitmodules  DESCRIPTION
.github/workflows/: wheels.yml
R/: RcppExports.R  fit.R
python/: CMakeLists.txt  appveyor.yml  clang-format.txt  pyproject.toml  setup.cfg  setup.py
python/l0learn/: args_check  interface.py  pyl0learn.cpp
python/l0learn/src/include/: L0LearnCore.h
python/src/l0learn/: interface.py  pyl0learn.cpp  pyl0learn.h
python/src/l0learn/src/: CDL012LogisticSwaps.cpp  CDL012SquaredHingeSwaps.cpp  CDL012Swaps.cpp  Grid.cpp  Grid1D.cpp  Grid2D.cpp
python/src/l0learn/src/include/: CDL012LogisticSwaps.h  CDL012SquaredHingeSwaps.h  CDL012Swaps.h  Grid.h  Grid1D.h  Grid2D.h  L0LearnCore.h
python/tests/: test_fit.py
src/: BetaVector.cpp  CD.cpp  CDL0.cpp  CDL012.cpp  CDL012Logistic.cpp  CDL012LogisticSwaps.cpp  CDL012SquaredHinge.cpp  CDL012SquaredHingeSwaps.cpp  CDL012Swaps.cpp  Grid.cpp  Grid1D.cpp  Grid2D.cpp  Interface.cpp  Normalize.cpp  RcppExports.cpp  Test_Interface.cpp  utils.cpp
src/include/: BetaVector.h  CD.h  CDL0.h  CDL012.h  CDL012Logistic.h  CDL012LogisticSwaps.h  CDL012SquaredHinge.h  CDL012SquaredHingeSwaps.h  CDL012Swaps.h  FitResult.h  Grid.h  Grid1D.h  Grid2D.h  GridParams.h  Interface.h  MakeCD.h  Normalize.h  Params.h  logging.h  utils.h
tests/testthat/: test_L0Learn.R  test_L0Learn_utils.R  test_L0Learn_versions.R
