[metadata]
name = l0learn
description = L0Learn is a highly efficient framework for solving L0-regularized learning problems.
author = Hussein Nonet
author_email = tim.nonet@gmail.com
license = MIT
platforms = any
url = https://github.com/hazimehh/L0Learn
project_urls =
    Source  = https://github.com/hazimehh/L0Learn
    Tracker = https://github.com/hazimehh/L0Learn/issues

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    scipy>=1.1.0
    pandas>=1.0.0
    matplotlib>=3.0.0
[options.extras_require]
test =
    pytest
    hypothesis
all =
    %(test)s
[tool:pytest]
addopts = -rsxX -v
testpaths = tests